Ass-1/getting_started/test_files/syntax_errors/MethodMissingClosingBracket.cpm
class MyClass {
  Init(): boolean {
    age := v_age
    return true
}
// @error - syntax (missing closing bracket for method)

class B {}

main() : int {
  print(MyClass().Init())
  return 0
}